[package]
name = "lockknife-cli-rs"
version = "0.1.0"
edition = "2021"
description = "Rust-first CLI runtime for LockKnife"
license = "GPL-3.0-only"
repository = "https://github.com/ImKKingshuk/LockKnife"

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
csv = "1.3"
dirs = "6.0"
hex = "0.4"
quick-xml = "0.38"
ratatui = { version = "0.30", features = ["crossterm"] }
rayon = "1.11"
regex = "1.12"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2.0"
toml = "0.8"
uuid = { version = "1.18", features = ["serde", "v4"] }
walkdir = "2.5"
zip = "2.4"
